# step2-redcap-uploader

./: .env.example  .gitignore  CHANGELOG.md  CONFIG_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_PROMPT.md  QUICK_START.md  README.md  REDCAP_IMPORT_EXPORT.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: build.yml  ci.yml  release.yml
config/: settings.py
data/: QC_Status_Report_21JUL2025.json  audit_trail_demo.json
docs/: config.md  guidelines.md  uploader.md
src/cli/: cli.py
src/config/: __init__.py  redcap_config.py  settings.py
src/logging/: __init__.py  logging_config.py
src/uploader/: __init__.py  change_tracker.py  data_processor.py  fetcher.py  file_monitor.py  uploader.py
tests/: conftest.py  test_basic.py  test_change_tracker.py  test_cli.py  test_config.py  test_data_processor.py  test_fetcher.py  test_file_monitor.py  test_uploader.py
