[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "udsv4-ru"
version = "0.1.0"
description = "A simplified tool for uploading QC Status Report data to REDCap with audit logging."
readme = "README.md"
license = "MPL-2.0"
packages = [
    { include = "src" },
]
include = [
    "ruff.toml",
    "mypy.ini",
    "README.md",
    "LICENSE.txt",
]

[tool.poetry.dependencies]
python = ">=3.11"
click = ">=8.0.0"
pandas = ">=2.0.0"
requests = ">=2.31.0"
openpyxl = ">=3.1.2"
python-dotenv = ">=1.0.0"
cerberus = ">=1.3.4"
jsonschema = ">=4.17.0"
structlog = ">=23.1.0"
colorlog = ">=6.7.0"
watchdog = ">=3.0.0"
python-dateutil = ">=2.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
mypy = "^1.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
wheel = "^0.40.0"
build = "^0.10.0"
twine = "^5.0.0"


[tool.poetry.extras]
analysis = ["numpy", "scipy", "matplotlib", "seaborn"]

[tool.poetry.scripts]
udsv4-ru = "src.cli.cli:cli"
